menu portifolio com animação

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
             <li><a href="#"><ion-icon name="share-social-outline"></ion-icon></a></li>
         </ul>
     </div>
+    <h1>Bruno Gabriel</h1>
+    <div class="container">
+        <div class="estatico">Eu Sou</div>
+            <ul class="dinamico">
+                <li><span>Youtuber</span></li>
+                <li><span>Designer</span></li>
+                <li><span>Desenvolvedor</span></li>
+                <li><span>Freelancer</span></li>
+            </ul>
+    </div>
     <div class="horizontal">
-        <h1>Bruno Gabriel</h1>
-        
         <ul style="list-style: none;">
             <li><a href="#"><ion-icon name="logo-instagram" class="coricon"></ion-icon></a></li>
             <li><a href="#"><ion-icon name="logo-twitter" class="coricon"></ion-icon></a></li>
