atualização de tela

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/media.css" media="screen">
+    <link rel="stylesheet" href="estilos/media.css" media="screen" >
 </head>
 <body>
     <div class="vertical">
         <ul style="list-style: none;">
-            <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="person-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="document-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="newspaper-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="mail-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="share-social-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="home-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="person-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="document-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="newspaper-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="mail-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="share-social-outline" class="coricon1"></ion-icon></a></li>
         </ul>
     </div>
     <h1>Bruno Gabriel</h1>
