--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media.css" media="screen" >
+    <link rel="stylesheet" href="script.js">
 </head>
 <body>
     <div class="vertical">
@@ -23,7 +24,8 @@
         </ul>
     </div>
     <h1>Bruno Gabriel</h1>
-    <div class="container">
+    <h3>Eu Sou <strong id="efeito"></strong></h3>
+    <!--<div class="container">
         <div class="estatico">Eu Sou</div>
             <ul class="dinamico">
                 <li><span>Youtuber</span></li>
@@ -31,7 +33,7 @@
                 <li><span>Desenvolvedor</span></li>
                 <li><span>Freelancer</span></li>
             </ul>
-    </div>
+    </div>-->
     <div class="horizontal">
         <ul style="list-style: none;">
             <li><a href="#"><ion-icon name="logo-instagram" class="coricon"></ion-icon></a></li>
