criação efeito maquina de escrever

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media.css" media="screen" >
-    <link rel="stylesheet" href="script.js">
 </head>
 <body>
     <div class="vertical">
@@ -23,8 +22,11 @@
             <li><a href="#"><ion-icon name="share-social-outline" class="coricon1"></ion-icon></a></li>
         </ul>
     </div>
-    <h1>Bruno Gabriel</h1>
-    <h3>Eu Sou <strong id="efeito"></strong></h3>
+    <div>
+        <h1>Bruno Gabriel</h1>
+        <h2>Eu sou</h2>
+        <h3><strong id="efeito"></strong></h3>
+    </div>
     <!--<div class="container">
         <div class="estatico">Eu Sou</div>
             <ul class="dinamico">
@@ -48,6 +50,55 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!--importação de fontes-->
     <style> @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); </style>
+    <script>
+        const textDisplay = document.getElementById('efeito') // nessa linha chamamos o id que foi definido na tag <strong> no doc html
+const phrases = ['Desenvolvedor WEB', 'WEB Designer', 'Programador FrontEnd'] // nessa linha são definidas as tres frases que serão animadas
+let i = 0
+let j = 0 
+let currentPhrase = []
+let isDeleting = false
+let isEnd = false
+
+function loop () {
+  isEnd = false
+  textDisplay.innerHTML = currentPhrase.join('')
+
+  if (i < phrases.length) {
+
+    if (!isDeleting && j <= phrases[i].length) {
+      currentPhrase.push(phrases[i][j])
+      j++
+      textDisplay.innerHTML = currentPhrase.join('')
+    }
+
+    if(isDeleting && j <= phrases[i].length) {
+      currentPhrase.pop(phrases[i][j])
+      j--
+      textDisplay.innerHTML = currentPhrase.join('')
+    }
+
+    if (j == phrases[i].length) {
+      isEnd = true
+      isDeleting = true
+    }
+
+    if (isDeleting && j === 0) {
+      currentPhrase = []
+      isDeleting = false
+      i++
+      if (i === phrases.length) {
+        i = 0
+      }
+    }
+  }
+  const spedUp = Math.random() * (80 -50) + 50
+  const normalSpeed = Math.random() * (300 -200) + 200
+  const time = isEnd ? 2000 : isDeleting ? spedUp : normalSpeed
+  setTimeout(loop, time)
+}
+
+loop()
+    </script>
     
 </body>
 </html>
