--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/media.css" media="screen" >
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <div class="vertical">
         <ul style="list-style: none;">
-            <li><a href="#"><ion-icon name="home-outline" class="coricon1"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="person-outline" class="coricon1"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="document-outline" class="coricon1"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="newspaper-outline" class="coricon1"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="mail-outline" class="coricon1"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="share-social-outline" class="coricon1"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="person-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="document-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="newspaper-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="mail-outline"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="share-social-outline"></ion-icon></a></li>
         </ul>
     </div>
     <div>
@@ -38,12 +37,12 @@
     </div>-->
     <div class="horizontal">
         <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram" class="coricon"></ion-icon></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><ion-icon name="logo-twitter" class="coricon"></ion-icon></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank"></a><ion-icon name="logo-facebook" class="coricon"></ion-icon></li>
-            <li><a href="https://br.linkedin.com/" target="_blank"></a><ion-icon name="logo-linkedin" class="coricon"></ion-icon></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube" class="coricon"></ion-icon></a></li>
-            <li><a href="https://github.com/" target="_blank"><ion-icon name="logo-github" class="coricon"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="https://twitter.com/" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"></a><ion-icon name="logo-facebook"></ion-icon></li>
+            <li><a href="https://br.linkedin.com/" target="_blank"></a><ion-icon name="logo-linkedin"></ion-icon></li>
+            <li><a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube" ></ion-icon></a></li>
+            <li><a href="https://github.com/" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
         </ul>
     </div>
     <!--importação de icones-->
