--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <div class="vertical">
+  <nav class="vertical">
+    <a href="#"><ion-icon name="home-outline" id="icon"></ion-icon></a>
+    <a href="#"><ion-icon name="person-outline" id="icon"></ion-icon></a>
+    <a href="#"><ion-icon name="document-outline" id="icon"></ion-icon></a>
+    <a href="#"><ion-icon name="newspaper-outline" id="icon"></ion-icon></a>
+    <a href="#"><ion-icon name="mail-outline" id="icon"></ion-icon></a>
+    <a href="#"><ion-icon name="share-social-outline" id="icon"></ion-icon></a>
+  </nav>
+    <!--<div class="vertical">
         <ul style="list-style: none;">
             <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
             <li><a href="#"><ion-icon name="person-outline"></ion-icon></a></li>
@@ -20,7 +28,7 @@
             <li><a href="#"><ion-icon name="mail-outline"></ion-icon></a></li>
             <li><a href="#"><ion-icon name="share-social-outline"></ion-icon></a></li>
         </ul>
-    </div>
+    </div>-->
     <div>
         <h1>Bruno Gabriel</h1>
         <h2>Eu sou</h2>
