--- a/index.html
+++ b/index.html
@@ -19,32 +19,21 @@
     <a href="#"><ion-icon name="mail-outline" id="icon"></ion-icon></a>
     <a href="#"><ion-icon name="share-social-outline" id="icon"></ion-icon></a>
   </nav>
-    <!--<div class="vertical">
-        <ul style="list-style: none;">
-            <li><a href="#"><ion-icon name="home-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="person-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="document-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="newspaper-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="mail-outline"></ion-icon></a></li>
-            <li><a href="#"><ion-icon name="share-social-outline"></ion-icon></a></li>
-        </ul>
-    </div>-->
-    <div>
-        <h1>Bruno Gabriel</h1>
-        <h2>Eu sou</h2>
-        <h3><strong id="efeito"></strong></h3>
-    </div>
-    <!--<div class="container">
-        <div class="estatico">Eu Sou</div>
-            <ul class="dinamico">
-                <li><span>Youtuber</span></li>
-                <li><span>Designer</span></li>
-                <li><span>Desenvolvedor</span></li>
-                <li><span>Freelancer</span></li>
-            </ul>
-    </div>-->
-    <div class="horizontal">
-        <ul style="list-style: none;">
+  <div>
+    <h1>Bruno Gabriel</h1>
+    <h2>Eu sou</h2>
+    <h3><strong id="efeito"></strong></h3>
+  </div>
+  <nav class="horizontal">
+    <a href="https://br.linkedin.com/" target="_blank" id="icon1"><ion-icon name="logo-linkedin"></ion-icon></a>
+    <a href="https://www.instagram.com/" target="_blank" id="icon2"><ion-icon name="logo-instagram"></ion-icon></a>
+    <a href="https://twitter.com/" target="_blank" id="icon3"><ion-icon name="logo-twitter"></ion-icon></a>
+    <a href="https://www.facebook.com/" target="_blank" id="icon4"><ion-icon name="logo-facebook"></ion-icon></a>
+    <a href="https://github.com/" target="_blank" id="icon5"><ion-icon name="logo-github"></ion-icon></a>
+    <a href="https://www.youtube.com/" target="_blank" id="icon6"><ion-icon name="logo-youtube" ></ion-icon></a>
+  </nav>
+  <!--<div class="horizontal">
+      <ul style="list-style: none;">
             <li><a href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
             <li><a href="https://twitter.com/" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
             <li><a href="https://www.facebook.com/" target="_blank"></a><ion-icon name="logo-facebook"></ion-icon></li>
@@ -52,54 +41,54 @@
             <li><a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube" ></ion-icon></a></li>
             <li><a href="https://github.com/" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
         </ul>
-    </div>
+    </div>>-->
     <!--importação de icones-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <!--importação de fontes-->
-    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); </style>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');</style>
     <script>
-        const textDisplay = document.getElementById('efeito') // nessa linha chamamos o id que foi definido na tag <strong> no doc html
-const phrases = ['Desenvolvedor WEB', 'WEB Designer', 'Programador FrontEnd'] // nessa linha são definidas as tres frases que serão animadas
-let i = 0
-let j = 0 
-let currentPhrase = []
-let isDeleting = false
-let isEnd = false
+      const textDisplay = document.getElementById('efeito') // nessa linha chamamos o id que foi definido na tag <strong> no doc html
+      const phrases = ['Desenvolvedor WEB', 'WEB Designer', 'Programador FrontEnd'] // nessa linha são definidas as tres frases que serão animadas
+      let i = 0
+      let j = 0 
+      let currentPhrase = []
+      let isDeleting = false
+      let isEnd = false
 
-function loop () {
-  isEnd = false
-  textDisplay.innerHTML = currentPhrase.join('')
-  if (i < phrases.length) {
-    if (!isDeleting && j <= phrases[i].length) {
-      currentPhrase.push(phrases[i][j])
-      j++
-      textDisplay.innerHTML = currentPhrase.join('')
-    }
-    if(isDeleting && j <= phrases[i].length) {
-      currentPhrase.pop(phrases[i][j])
-      j--
-      textDisplay.innerHTML = currentPhrase.join('')
-    }
-    if (j == phrases[i].length) {
-      isEnd = true
-      isDeleting = true
-    }
-    if (isDeleting && j === 0) {
-      currentPhrase = []
-      isDeleting = false
-      i++
-      if (i === phrases.length) {
-        i = 0
+      function loop () {
+        isEnd = false
+        textDisplay.innerHTML = currentPhrase.join('')
+        if (i < phrases.length) {
+          if (!isDeleting && j <= phrases[i].length) {
+            currentPhrase.push(phrases[i][j])
+            j++
+            textDisplay.innerHTML = currentPhrase.join('')
+          }
+          if(isDeleting && j <= phrases[i].length) {
+            currentPhrase.pop(phrases[i][j])
+            j--
+            textDisplay.innerHTML = currentPhrase.join('')
+          }
+          if (j == phrases[i].length) {
+            isEnd = true
+            isDeleting = true
+          }
+          if (isDeleting && j === 0) {
+            currentPhrase = []
+            isDeleting = false
+            i++
+            if (i === phrases.length) {
+              i = 0
+            }
+          }
+        }
+        const spedUp = Math.random() * (80 -50) + 50
+        const normalSpeed = Math.random() * (300 -200) + 200
+        const time = isEnd ? 2000 : isDeleting ? spedUp : normalSpeed
+        setTimeout(loop, time)
       }
-    }
-  }
-  const spedUp = Math.random() * (80 -50) + 50
-  const normalSpeed = Math.random() * (300 -200) + 200
-  const time = isEnd ? 2000 : isDeleting ? spedUp : normalSpeed
-  setTimeout(loop, time)
-}
-loop()
-    </script>
+      loop()
+</script>
 </body>
 </html>
