--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <h3><strong id="efeito"></strong></h3>
   </div>
   <nav class="horizontal">
-    <a href="https://br.linkedin.com/" target="_blank" id="icon1"><ion-icon name="logo-linkedin"></ion-icon></a>
-    <a href="https://www.instagram.com/" target="_blank" id="icon2"><ion-icon name="logo-instagram"></ion-icon></a>
-    <a href="https://twitter.com/" target="_blank" id="icon3"><ion-icon name="logo-twitter"></ion-icon></a>
-    <a href="https://www.facebook.com/" target="_blank" id="icon4"><ion-icon name="logo-facebook"></ion-icon></a>
-    <a href="https://github.com/" target="_blank" id="icon5"><ion-icon name="logo-github"></ion-icon></a>
-    <a href="https://www.youtube.com/" target="_blank" id="icon6"><ion-icon name="logo-youtube" ></ion-icon></a>
+    <a href="https://br.linkedin.com/" target="_blank" id="icon1"><ion-icon name="logo-linkedin" class="visual" ></ion-icon></a>
+    <a href="https://www.instagram.com/" target="_blank" id="icon2" ><ion-icon name="logo-instagram" class="visual"></ion-icon></a>
+    <a href="https://twitter.com/" target="_blank" id="icon3" ><ion-icon name="logo-twitter" class="visual"></ion-icon></a>
+    <a href="https://www.facebook.com/" target="_blank" id="icon4" ><ion-icon name="logo-facebook" class="visual"></ion-icon></a>
+    <a href="https://github.com/" target="_blank" id="icon5" ><ion-icon name="logo-github" class="visual"></ion-icon></a>
+    <a href="https://www.youtube.com/" target="_blank" id="icon6"><ion-icon name="logo-youtube" class="visual"></ion-icon></a>
   </nav>
   <!--<div class="horizontal">
       <ul style="list-style: none;">
