--- a/index.html
+++ b/index.html
@@ -32,63 +32,55 @@
     <a href="https://github.com/" target="_blank" id="icon5" ><ion-icon name="logo-github" class="visual"></ion-icon></a>
     <a href="https://www.youtube.com/" target="_blank" id="icon6"><ion-icon name="logo-youtube" class="visual"></ion-icon></a>
   </nav>
-  <!--<div class="horizontal">
-      <ul style="list-style: none;">
-            <li><a href="https://www.instagram.com/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank"></a><ion-icon name="logo-facebook"></ion-icon></li>
-            <li><a href="https://br.linkedin.com/" target="_blank"></a><ion-icon name="logo-linkedin"></ion-icon></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><ion-icon name="logo-youtube" ></ion-icon></a></li>
-            <li><a href="https://github.com/" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-        </ul>
-    </div>>-->
-    <!--importação de icones-->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <!--importação de fontes-->
-    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');</style>
-    <script>
-      const textDisplay = document.getElementById('efeito') // nessa linha chamamos o id que foi definido na tag <strong> no doc html
-      const phrases = ['Desenvolvedor WEB', 'WEB Designer', 'Programador FrontEnd'] // nessa linha são definidas as tres frases que serão animadas
-      let i = 0
-      let j = 0 
-      let currentPhrase = []
-      let isDeleting = false
-      let isEnd = false
+  <!--importação de icones-->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-      function loop () {
-        isEnd = false
-        textDisplay.innerHTML = currentPhrase.join('')
-        if (i < phrases.length) {
-          if (!isDeleting && j <= phrases[i].length) {
-            currentPhrase.push(phrases[i][j])
-            j++
-            textDisplay.innerHTML = currentPhrase.join('')
-          }
-          if(isDeleting && j <= phrases[i].length) {
-            currentPhrase.pop(phrases[i][j])
-            j--
-            textDisplay.innerHTML = currentPhrase.join('')
-          }
-          if (j == phrases[i].length) {
-            isEnd = true
-            isDeleting = true
-          }
-          if (isDeleting && j === 0) {
-            currentPhrase = []
-            isDeleting = false
-            i++
-            if (i === phrases.length) {
-              i = 0
-            }
+  <!--importação de fontes-->
+  <style> @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');</style>
+
+  <!--criação do texto animado com script-->
+  <script>
+    const textDisplay = document.getElementById('efeito') // nessa linha chamamos o id que foi definido na tag <strong> no doc html
+    const phrases = ['Desenvolvedor WEB', 'WEB Designer', 'Programador FrontEnd'] // nessa linha são definidas as três frases que serão animadas
+    let i = 0
+    let j = 0 
+    let currentPhrase = []
+    let isDeleting = false
+    let isEnd = false
+    function loop () {
+      isEnd = false
+      textDisplay.innerHTML = currentPhrase.join('')
+      if (i < phrases.length) {
+        if (!isDeleting && j <= phrases[i].length) {
+          currentPhrase.push(phrases[i][j])
+          j++
+          textDisplay.innerHTML = currentPhrase.join('')
+        }
+        if(isDeleting && j <= phrases[i].length) {
+          currentPhrase.pop(phrases[i][j])
+          j--
+          textDisplay.innerHTML = currentPhrase.join('')
+        }
+        if (j == phrases[i].length) {
+          isEnd = true
+          isDeleting = true
+        }
+        if (isDeleting && j === 0) {
+          currentPhrase = []
+          isDeleting = false
+          i++
+          if (i === phrases.length) {
+            i = 0
           }
         }
+      }
         const spedUp = Math.random() * (80 -50) + 50
         const normalSpeed = Math.random() * (300 -200) + 200
         const time = isEnd ? 2000 : isDeleting ? spedUp : normalSpeed
         setTimeout(loop, time)
-      }
-      loop()
-</script>
+    }
+    loop()
+  </script>
 </body>
 </html>
